fixed on smaller phones

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -705,7 +705,6 @@ p {
 }
 
 .jonathan {
-  padding-top: 20px;
   font-size: 50px;
   display: flex;
   justify-content: center;
@@ -854,7 +853,7 @@ p {
   transform: none;
   -webkit-transform: translateZ(0px);
   -webkit-transform: translate3d(0, 0, 0);
-  -webkit-perspective: 1000;
+  // -webkit-perspective: 1000;
 }
 
 @media (max-width: 800px) {
